# run-git

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  MANIFEST.in  QUICKSTART.md  README.md  TESTING_GUIDE.md  architect.md  pyproject.toml  requirements.txt  setup.py
.opencode/context/project-intelligence/: navigation.md  technical-domain.md
.tmp/sessions/2026-03-29-git-graph-feature/: context.md
backend/app/core/: security.py
gitpush/: __init__.py  cli.py
gitpush/ai/: config.py  factory.py
gitpush/ai/providers/: google.py  grok.py
gitpush/commands/: __init__.py  commit_ai.py  config_cmd.py  github.py  graph.py  init.py  pr_ai.py  review_ai.py  tag_release.py  theme.py
gitpush/config/: settings.py
gitpush/core/: ai_engine.py  commit_generator.py  git_operations.py  github_manager.py  graph_renderer.py
gitpush/ezgit/: __init__.py  __main__.py  cli.py
gitpush/ezgit/config/: __init__.py
gitpush/ezgit/config/templates/: .gitignore
gitpush/ezgit/core/: __init__.py  commit_generator.py  conflict_resolver.py  git_operations.py
gitpush/ezgit/ui/: __init__.py  banner.py  interactive.py
gitpush/ezgit/utils/: __init__.py
gitpush/ui/: banner.py  help_docs.py  interactive.py  renderer.py
gitpush/utils/: license.py
tests/: __init__.py  test_basic.py  test_comprehensive.py  test_git_operations.py  test_github_manager.py  test_tag_release.py
